# facecast-io

./: .bumpversion.cfg  CHANGELOG.md  README.rst  mypy.ini  pyproject.toml
.github/workflows/: pythonpackage.yml  regular_tests_run.yml  release_package.yml  tests_run.yml
facecast_io/: __init__.py  __main__.py  api.py  logger_setup.py  models.py  server_connector.py  utils.py
facecast_io/core/: entities.py  errors.py  server_connector.py
facecast_io/entities/: __init__.py  common.py  device.py  device_input.py  device_output.py  stream.py
tests/: conftest.py  test_facecast_io.py  test_server_connector.py
