[tool.poetry]
name = "facecast_io"
version = "0.1.2"
description = ""
authors = ["Serhii Khalymon <sergiykhalimon@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
httpx = "^0.12.1"
pyquery = "^1.4.1"
yarl = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bump2version = "^1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
