[tool.poetry]
name = "facecast_io"
version = "0.4.0"
description = "Unofficial API for facecast.io"
authors = ["Serhii Khalymon <sergiykhalimon@gmail.com>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/skhalymon/facecast-io"

keywords = ["facecast", "api-client"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Sound/Audio",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
]


[tool.poetry.dependencies]
python = "^3.7"
httpx = "^0.12.1"
pyquery = "^1.4.1"
retry = "^0.9.2"
typing = {version = "^3.7", python = "<3.8"}
typing_extensions = {version = "^3.7", python = "<3.8"}
pydantic = "^1.6.1"
typer = "^0.3.1"
colorama = "^0.4.3"
shellingham = "^1.3.2"
email-validator = "^1.1.1"
tld = "^0.12.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
bump2version = "^1.0.0"
flake8 = "^3.7.9"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
